[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "A key-value store limited by size or time, allowing accumulation of multiple values under a single key."
documentation = "http://docs.maidsafe.net/accumulator/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0/MaidSafe.net Commercial License 1.0"
name = "accumulator"
readme = "README.md"
repository = "https://github.com/maidsafe/accumulator"
version = "0.4.0"

[dependencies]
clippy = {version = "~0.0.71", optional = true}
lru_time_cache = "~0.4.0"

[dev-dependencies]
rand = "~0.3.14"
