[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "A key-value store limited by size or time, allowing accumulation of multiple values under a single key."
documentation = "https://docs.rs/accumulator"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "accumulator"
readme = "README.md"
repository = "https://github.com/maidsafe/accumulator"
version = "0.7.0"
edition = "2018"

[dependencies]
lru_time_cache = "~0.7.0"

[dev-dependencies]
rand = "~0.3.15"
